# pychee

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pychee.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: pydocstyle.yml  pytest.yml  sphinx-build.yml
_sources/: index.md.txt  pychee.rst.txt
docs/doctrees/: environment.pickle  index.doctree  pycev.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  pycev.html  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
docsource/: conf.py  index.md  index.rst  pycev.rst  pychee.rst  sphinxrequires.txt
pychee/: __init__.py  pychee.py
