[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pychee"
description = "Client for Lychee, written in Python."
readme = "README.md"
dynamic = ["version"]
license = {file = "LICENSE"}
maintainers = [
    {name = "Quentin Duchemin", email = "quentinduchemin@tuta.io"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pydocstyle",
    "pylint",
]
test = [
    "pytest",
]

dependencies = [
    "requests"
]

[project.urls]
Home = "https://github.com/Chostakovitch/pychee"
Repository = "https://github.com/Chostakovitch/pychee"
Issues = "https://github.com/Chostakovitch/pychee/issues"
Documentation = "https://chostakovitch.github.io/pychee/index.html"
