[metadata]
name = pychee
version = attr: pychee.pychee.__version__
description = Client for Lychee, written in Python.
long_description = file: README.md, LICENSE
keywords = lychee
license = AGPL-3.0
classifiers =
    License :: OSI Approved :: AGPL-3.0
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests

[pydocstyle]
[mypy]
