[metadata]
name = pychee
version = attr: pychee.pychee.__version__
author = Quentin Duchemin
author_email = quentinduchemin@tuta.io
description = Client for Lychee, written in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Chostakovitch/pychee
keywords = lychee
license = AGPL-3.0
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests

[pydocstyle]
[mypy]
